# $Id: Makefile.am 48248 2013-03-11 17:57:08Z gerald $
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	wireshark.nsi	\
	uninstall.nsi	\
	common.nsh	\
	GetWindowsVersion.nsh \
	servicelib.nsh \
	VersionCompare.nsh \
	AdditionalTasksPage.ini \
	WinPcapPage.ini \
	WinPcap_4_1_3.exe \
	Makefile.nmake \
	Custom.nmake \
	custom_plugins.txt	\
	x64.nsh
